# machine_learning_experiments

linear_algebra/: CMakeLists.txt
linear_algebra/src/: assembly.cppm  combination.cppm  concepts.cppm  main.cpp  matrix.cppm  printing.cppm  transforms.cppm
linear_algebra/src/assembly/: shapes.cppm
linear_algebra/src/concepts/: matrices.cppm  operations.cppm  scalars.cppm  vectors.cppm
perceptron/: CMakeLists.txt  main.cpp  perceptron.hpp  tests.hpp
perceptron/perceptron/: learning.inl  perceptron.inl
perceptron/tests/: color_brightness_data_set.hpp  color_brightness_tests.inl  positive_x_tests.inl
